fixed navbar tabs still display on mobile screen issue

--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -1,11 +1,14 @@
-button.nav-tab span a {
+button.nav-tab span {
     color: white;
-    margin-left: 5vw; 
+    margin: 0 1vw; 
 }
 
-h6.nav-tab a {
-    color: white;
+button.nav-tab span span {
+    margin: 0;
 }
+/* h6.nav-tab a {
+    color: white;
+} */
 
 @media screen and (max-width: 600px) {
     button.nav-tab span a {
