--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
     padding: 0 !important;
 } */
 
-table {
-    /* width: 100vw; */
-    /* margin-left: 240; */
-}
+/* table {
+    width: 100vw;
+    margin-left: 240;
+} */
